--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,5 +1,12 @@
 components:
-- components: []
+- components:
+  - name: data_grid
+    properties:
+      auto_header: true
+      show_page_size: true
+      page_size: 10
+      show_page_controls: true
+    type: DataGrid
   layout_properties: {slot: default}
   name: content_panel
   properties: {col_widths: '{}'}
