--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,8 +1,7 @@
 components:
 - components:
   - name: text_label
-    properties:
-      text: ''
+    properties: {text: ''}
     type: Label
   layout_properties: {slot: default}
   name: content_panel
