--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,101 +1,46 @@
 components:
 - components:
-  - name: header_panel
-    properties:
-      background: '#1a237e'
-      foreground: 'white'
-      padding: '20px'
-      spacing_above: 'none'
-      spacing_below: 'none'
-      height: '80px'
-    type: FlowPanel
-    components:
+  - components:
     - name: title_label
-      properties:
-        text: 'Dashboard'
-        font_size: 28
-        bold: true
-        foreground: 'white'
+      properties: {bold: true, font_size: 28, foreground: white, text: Dashboard}
       type: Label
     - name: subtitle_label
-      properties:
-        text: 'Welcome to your control panel'
-        font_size: 16
-        foreground: '#b3e5fc'
-        spacing_above: 'small'
+      properties: {font_size: 16, foreground: '#b3e5fc', spacing_above: small, text: Welcome to your control panel}
       type: Label
-  - name: main_container
-    properties:
-      background: '#f5f5f5'
-      padding: '30px'
-      spacing_above: 'none'
-      spacing_below: 'none'
+    name: header_panel
+    properties: {background: '#1a237e', foreground: white, height: 80px, padding: 20px, spacing_above: none, spacing_below: none}
     type: FlowPanel
-    components:
-    - name: stats_panel
-      properties:
-        background: 'white'
-        padding: '20px'
-        spacing_above: 'none'
-        spacing_below: 'large'
-        border: '1px solid #e0e0e0'
-        corner_radius: '8px'
-      type: FlowPanel
-      components:
+  - components:
+    - components:
       - name: stats_title
-        properties:
-          text: 'Statistics'
-          font_size: 20
-          bold: true
-          foreground: '#1a237e'
-          spacing_below: 'medium'
+        properties: {bold: true, font_size: 20, foreground: '#1a237e', spacing_below: medium, text: Statistics}
         type: Label
       - name: text_label
-        properties:
-          text: ''
-          font_size: 16
-          foreground: '#424242'
+        properties: {font_size: 16, foreground: '#424242', text: ''}
         type: Label
-    - name: info_panel
-      properties:
-        background: 'white'
-        padding: '20px'
-        spacing_above: 'none'
-        spacing_below: 'none'
-        border: '1px solid #e0e0e0'
-        corner_radius: '8px'
+      name: stats_panel
+      properties: {background: white, border: '1px solid #e0e0e0', corner_radius: 8px, padding: 20px, spacing_above: none, spacing_below: large}
       type: FlowPanel
-      components:
+    - components:
       - name: info_title
-        properties:
-          text: 'Information'
-          font_size: 20
-          bold: true
-          foreground: '#1a237e'
-          spacing_below: 'medium'
+        properties: {bold: true, font_size: 20, foreground: '#1a237e', spacing_below: medium, text: Information}
         type: Label
       - name: info_content
-        properties:
-          text: 'This is a professional dashboard layout with modern styling.'
-          font_size: 16
-          foreground: '#424242'
+        properties: {font_size: 16, foreground: '#424242', text: This is a professional dashboard layout with modern styling.}
         type: Label
-  - name: footer_panel
-    properties:
-      background: '#1a237e'
-      foreground: 'white'
-      padding: '20px'
-      spacing_above: 'large'
-      spacing_below: 'none'
-      height: '60px'
+      name: info_panel
+      properties: {background: white, border: '1px solid #e0e0e0', corner_radius: 8px, padding: 20px, spacing_above: none, spacing_below: none}
+      type: FlowPanel
+    name: main_container
+    properties: {background: '#f5f5f5', padding: 30px, spacing_above: none, spacing_below: none}
     type: FlowPanel
-    components:
+  - components:
     - name: footer_label
-      properties:
-        text: '© 2024 Professional Dashboard'
-        font_size: 14
-        foreground: '#b3e5fc'
+      properties: {font_size: 14, foreground: '#b3e5fc', text: © 2024 Professional Dashboard}
       type: Label
+    name: footer_panel
+    properties: {background: '#1a237e', foreground: white, height: 60px, padding: 20px, spacing_above: large, spacing_below: none}
+    type: FlowPanel
   layout_properties: {slot: default}
   name: content_panel
   properties: {col_widths: '{}'}
